--- a/Modacity/Modacity/ViewController/MetroDrone/metrodone.storyboard
+++ b/Modacity/Modacity/ViewController/MetroDrone/metrodone.storyboard
@@ -474,7 +474,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sFe-wT-VGF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5.5999999999999996" y="163.26836581709148"/>
+            <point key="canvasLocation" x="3.75" y="162.67605633802816"/>
         </scene>
         <!--Metrodone View Controller-->
         <scene sceneID="OQj-3s-dsZ">
