--- a/Modacity/Modacity/ViewController/MetroDrone/metrodroneview.xib
+++ b/Modacity/Modacity/ViewController/MetroDrone/metrodroneview.xib
@@ -170,7 +170,7 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C9J-Z2-H7g" userLabel="Drone Duration">
-                    <rect key="frame" x="14" y="277" width="208" height="24"/>
+                    <rect key="frame" x="14" y="302" width="208" height="24"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DRONE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8xr-Zo-aKS">
                             <rect key="frame" x="0.0" y="2" width="40" height="20"/>
@@ -248,20 +248,20 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ryk-zI-8ta">
-                    <rect key="frame" x="236" y="54" width="1" height="252"/>
+                    <rect key="frame" x="236" y="54" width="1" height="272"/>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.10000000000000001" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="1" id="Gil-LH-Cs1"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0HA-PU-5jN" userLabel="View Play">
-                    <rect key="frame" x="251" y="54" width="110" height="247"/>
+                    <rect key="frame" x="251" y="54" width="110" height="267"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6ZI-eK-Slj">
-                            <rect key="frame" x="0.0" y="0.0" width="110" height="69"/>
+                            <rect key="frame" x="0.0" y="0.0" width="110" height="89"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fgh-Gr-I7N" userLabel="tempo Area">
-                                    <rect key="frame" x="9" y="3" width="92" height="63"/>
+                                    <rect key="frame" x="9" y="13" width="92" height="63"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" alpha="0.75" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="18" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FYv-Yn-hzf">
                                             <rect key="frame" x="35.5" y="0.0" width="21" height="22"/>
@@ -308,7 +308,7 @@
                             </constraints>
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="unh-EW-uoS" userLabel="btn Play">
-                            <rect key="frame" x="-1" y="69" width="112" height="65"/>
+                            <rect key="frame" x="-1" y="89" width="112" height="65"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="unh-EW-uoS" secondAttribute="height" multiplier="112:65" id="VLw-kg-aUD"/>
                             </constraints>
@@ -318,7 +318,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vHl-NL-NcD" userLabel="btn Tap">
-                            <rect key="frame" x="-2" y="134" width="112" height="65"/>
+                            <rect key="frame" x="-2" y="154" width="112" height="65"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="vHl-NL-NcD" secondAttribute="height" multiplier="112:65" id="mwF-Xd-nzL"/>
                             </constraints>
@@ -330,7 +330,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sgw-U1-y52" userLabel="Subdivision">
-                            <rect key="frame" x="-1" y="199" width="112" height="48"/>
+                            <rect key="frame" x="-1" y="219" width="112" height="48"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="112" id="QN3-9U-Iau"/>
                                 <constraint firstAttribute="height" constant="48" id="lBY-kZ-2Jb"/>
@@ -341,14 +341,14 @@
                             </connections>
                         </button>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="subdiv_circle_gray" translatesAutoresizingMaskIntoConstraints="NO" id="ax9-A8-2TC">
-                            <rect key="frame" x="9" y="204" width="29" height="29"/>
+                            <rect key="frame" x="9" y="224" width="29" height="29"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="ax9-A8-2TC" secondAttribute="height" multiplier="1:1" id="VD0-22-SiQ"/>
                                 <constraint firstAttribute="width" constant="29" id="qaF-XB-7nM"/>
                             </constraints>
                         </imageView>
                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_note_1" translatesAutoresizingMaskIntoConstraints="NO" id="aNk-pX-a4v">
-                            <rect key="frame" x="14" y="209" width="19" height="19"/>
+                            <rect key="frame" x="14" y="229" width="19" height="19"/>
                         </imageView>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -384,7 +384,7 @@
                 <constraint firstItem="ryk-zI-8ta" firstAttribute="leading" secondItem="sxv-BO-Wjn" secondAttribute="trailing" constant="12" id="6MT-M8-pN0"/>
                 <constraint firstItem="sxv-BO-Wjn" firstAttribute="top" secondItem="ryk-zI-8ta" secondAttribute="top" constant="5" id="AbQ-TM-AUP"/>
                 <constraint firstItem="0HA-PU-5jN" firstAttribute="bottom" secondItem="ryk-zI-8ta" secondAttribute="bottom" constant="-5" id="Ehn-d1-i7H"/>
-                <constraint firstAttribute="bottom" secondItem="ryk-zI-8ta" secondAttribute="bottom" constant="30" id="J4S-Tq-rxT"/>
+                <constraint firstAttribute="bottom" secondItem="ryk-zI-8ta" secondAttribute="bottom" constant="10" id="J4S-Tq-rxT"/>
                 <constraint firstItem="LvR-aM-JVq" firstAttribute="centerX" secondItem="Qzd-2W-zSI" secondAttribute="centerX" id="MY1-t2-6BZ"/>
                 <constraint firstAttribute="trailing" secondItem="YbL-FD-TCe" secondAttribute="trailing" id="P55-bn-1Oa"/>
                 <constraint firstItem="gOh-ki-gbn" firstAttribute="leading" secondItem="Qzd-2W-zSI" secondAttribute="leading" id="Qrq-Dg-pjq"/>
@@ -392,7 +392,7 @@
                 <constraint firstItem="ryk-zI-8ta" firstAttribute="leading" secondItem="C9J-Z2-H7g" secondAttribute="trailing" constant="14" id="Thu-ss-Z0p"/>
                 <constraint firstItem="gOh-ki-gbn" firstAttribute="top" secondItem="Qzd-2W-zSI" secondAttribute="top" id="Wd5-sC-bOG"/>
                 <constraint firstAttribute="bottom" secondItem="YbL-FD-TCe" secondAttribute="bottom" id="atI-yP-zSd"/>
-                <constraint firstItem="C9J-Z2-H7g" firstAttribute="bottom" secondItem="ryk-zI-8ta" secondAttribute="bottom" constant="-5" id="d5Q-uz-O7v"/>
+                <constraint firstItem="C9J-Z2-H7g" firstAttribute="bottom" secondItem="ryk-zI-8ta" secondAttribute="bottom" id="d5Q-uz-O7v"/>
                 <constraint firstAttribute="trailing" secondItem="gOh-ki-gbn" secondAttribute="trailing" id="itW-hD-Jgx"/>
                 <constraint firstItem="ryk-zI-8ta" firstAttribute="top" secondItem="LvR-aM-JVq" secondAttribute="bottom" constant="10" id="jNJ-yn-O9q"/>
                 <constraint firstItem="C9J-Z2-H7g" firstAttribute="leading" secondItem="Qzd-2W-zSI" secondAttribute="leading" constant="14" id="lJa-GH-H2e"/>
