Ver 1.7(2) for Timer feature completion.

--- a/Modacity/Modacity/ViewController/Playlist/playlist.storyboard
+++ b/Modacity/Modacity/ViewController/Playlist/playlist.storyboard
@@ -44,10 +44,10 @@
             </objects>
             <point key="canvasLocation" x="-769" y="164"/>
         </scene>
-        <!--Playlist View Controller-->
+        <!--Playlist List View Controller-->
         <scene sceneID="kwV-Nt-vQV">
             <objects>
-                <viewController id="vBF-aB-TFO" customClass="PlaylistViewController" customModule="Modacity" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="vBF-aB-TFO" customClass="PlaylistListViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ZIi-Ka-Dbm">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -226,10 +226,10 @@
             </objects>
             <point key="canvasLocation" x="5.5999999999999996" y="163.26836581709148"/>
         </scene>
-        <!--Playlist Details View Controller-->
+        <!--Playlist Contents View Controller-->
         <scene sceneID="xsy-3g-jTm">
             <objects>
-                <viewController storyboardIdentifier="PlaylistDetailsViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="2UX-vR-wCX" customClass="PlaylistDetailsViewController" customModule="Modacity" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PlaylistContentsViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="2UX-vR-wCX" customClass="PlaylistContentsViewController" customModule="Modacity" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="qrw-ma-BZY">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
