--- a/Modacity/Modacity/ViewController/PlayPractice/practice.storyboard
+++ b/Modacity/Modacity/ViewController/PlayPractice/practice.storyboard
@@ -264,6 +264,12 @@
                                     <action selector="onTapTimer:" destination="ruu-CR-fPU" eventType="touchUpInside" id="AjN-ZV-EK4"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TIME'S UP!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ryZ-qd-P4v">
+                                <rect key="frame" x="87.5" y="124" width="227" height="39"/>
+                                <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="32"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rFP-in-7sp">
                                 <rect key="frame" x="150.5" y="207" width="74" height="74"/>
                                 <constraints>
@@ -475,10 +481,12 @@
                             <constraint firstItem="nOB-0N-33h" firstAttribute="top" secondItem="klf-jy-ZRu" secondAttribute="top" constant="100" id="SsS-Si-uPf"/>
                             <constraint firstItem="rFP-in-7sp" firstAttribute="top" secondItem="nOB-0N-33h" secondAttribute="bottom" constant="40" id="VzI-8s-UOD"/>
                             <constraint firstItem="nOB-0N-33h" firstAttribute="centerX" secondItem="klf-jy-ZRu" secondAttribute="centerX" id="Whu-fn-doK"/>
+                            <constraint firstItem="ryZ-qd-P4v" firstAttribute="centerY" secondItem="nOB-0N-33h" secondAttribute="centerY" id="Wio-Vp-We7"/>
                             <constraint firstItem="iGP-Iw-poe" firstAttribute="leading" secondItem="nOB-0N-33h" secondAttribute="trailing" constant="-5" id="ZKQ-6b-Xu2"/>
                             <constraint firstItem="f6j-O8-RAm" firstAttribute="top" secondItem="klf-jy-ZRu" secondAttribute="top" constant="-20" id="bsg-g1-FJf"/>
                             <constraint firstItem="RLr-qK-k0M" firstAttribute="top" secondItem="klf-jy-ZRu" secondAttribute="top" constant="16" id="cg6-4Q-sSr"/>
                             <constraint firstItem="fvc-u8-dWp" firstAttribute="leading" secondItem="klf-jy-ZRu" secondAttribute="leading" id="d7F-rf-6Za"/>
+                            <constraint firstItem="ryZ-qd-P4v" firstAttribute="leading" secondItem="nOB-0N-33h" secondAttribute="leading" id="dZr-EO-7KA"/>
                             <constraint firstItem="fvc-u8-dWp" firstAttribute="bottom" secondItem="klf-jy-ZRu" secondAttribute="bottom" constant="40" id="dg6-sN-1FJ"/>
                             <constraint firstItem="klf-jy-ZRu" firstAttribute="trailing" secondItem="Mgx-Ny-ARF" secondAttribute="trailing" id="dgD-fx-HYB"/>
                             <constraint firstItem="6oE-xZ-flo" firstAttribute="leading" secondItem="klf-jy-ZRu" secondAttribute="leading" id="eTL-Iz-7BY"/>
@@ -487,6 +495,7 @@
                             <constraint firstItem="klf-jy-ZRu" firstAttribute="trailing" secondItem="WB3-aN-ciO" secondAttribute="trailing" id="hrG-ZV-djh"/>
                             <constraint firstItem="NsF-v0-8c8" firstAttribute="leading" secondItem="Mgx-Ny-ARF" secondAttribute="leading" id="jXF-Wa-c6j"/>
                             <constraint firstItem="fvc-u8-dWp" firstAttribute="trailing" secondItem="klf-jy-ZRu" secondAttribute="trailing" id="tpU-Od-Mtw"/>
+                            <constraint firstItem="ryZ-qd-P4v" firstAttribute="trailing" secondItem="iGP-Iw-poe" secondAttribute="trailing" id="u6T-Dq-Hka"/>
                             <constraint firstItem="CqK-vm-U6A" firstAttribute="trailing" secondItem="klf-jy-ZRu" secondAttribute="trailing" id="v9C-2X-FGh"/>
                             <constraint firstItem="Mgx-Ny-ARF" firstAttribute="leading" secondItem="klf-jy-ZRu" secondAttribute="leading" id="vCZ-PO-YK1"/>
                             <constraint firstItem="f6j-O8-RAm" firstAttribute="leading" secondItem="klf-jy-ZRu" secondAttribute="leading" id="vUG-NE-ful"/>
@@ -513,6 +522,7 @@
                         <outlet property="labelPracticeItemName" destination="RLr-qK-k0M" id="kTI-DJ-erj"/>
                         <outlet property="labelRateValue" destination="Kfb-qe-xMm" id="4Ea-s2-DWw"/>
                         <outlet property="labelSeconds" destination="Q8r-rh-dfF" id="nDf-qw-q2y"/>
+                        <outlet property="labelTimerUp" destination="ryZ-qd-P4v" id="eyf-re-AUP"/>
                         <outlet property="viewAudioPlayer" destination="NsF-v0-8c8" id="AmN-G6-TPP"/>
                         <outlet property="viewBottomXBar" destination="eWg-AM-3qY" id="5h0-BP-Wh9"/>
                         <outlet property="viewRatePanel" destination="VGv-Xf-hGZ" id="ufh-qV-7MN"/>
@@ -1253,6 +1263,6 @@ note</string>
         <image name="walkthrough_rate_arrow_2" width="12" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Nwc-WJ-zdU"/>
+        <segue reference="dLc-mu-N4Z"/>
     </inferredMetricsTieBreakers>
 </document>
